src/test/ui/error-codes/E0441.stderr
error[E0441]: unrecognized platform-specific intrinsic function: `x86_mm_adds_ep16`
  --> $DIR/E0441.rs:18:5
   |
18 |     fn x86_mm_adds_ep16(x: i16x8, y: i16x8) -> i16x8; //~ ERROR E0441
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

